## Process this file with automake to produce Makefile.in
#
# 2004 (c) Alejandro Claro
#

pkgpixmapsdir = $(pkgdatadir)/pixmaps
pkgpixmaps_DATA =      \
    gtorrentviewer.xpm \
  	gtorrentviewer.png \
    about.png          \
    dictionary.png     \
    error.png          \
    integer.png        \
    list.png           \
    ok.png             \
    string.png         \
    warning.png        \
    info.png           \
    unknown.png

EXTRA_DIST = $(pkgpixmaps_DATA)

distpixmapdir = @PIXMAPDIR@
distpixmap_DATA =  \
    gtorrentviewer.xpm \
  	gtorrentviewer.png
